--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,11 @@ name = "bear_lib_terminal_test"
 version = "0.1.0"
 authors = ["Ryan1729 <Ryan1729@gmail.com>"]
 
+[workspace]
+
 [dependencies]
 bear-lib-terminal = "1.3.2"
+libloading = "0.3"
+
+[dependencies.game]
+path = "./game"
