--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Ryan1729 <Ryan1729@gmail.com>"]
 
 [dependencies]
 bear-lib-terminal = "1.3.2"
+bear-lib-terminal-sys = "1.1.1"
 libloading = "0.3"
 
 [dependencies.game]
